# autovocoder

./: .gitignore  Cargo.toml  README.md  justfile
.devcontainer/: .user-post-create.sh  devcontainer.json  post-create.sh
crates/autovocoder-dsp/: Cargo.toml
crates/autovocoder-dsp/src/: autovocoder.rs  chorus.rs  crusher.rs  dynamics.rs  filter.rs  lib.rs  osc.rs  pitch.rs  saturate.rs  scale.rs  tremolo.rs  vocoder.rs
crates/autovocoder-dsp/src/pitch/: fft_peak.rs  mod.rs  yin_classic.rs  yin_fft.rs
crates/autovocoder-lv2/: Cargo.toml
crates/autovocoder-lv2/lv2/: autovocoder.ttl  manifest.ttl  presets.ttl
crates/autovocoder-lv2/src/: lib.rs
crates/autovocoder-standalone/: Cargo.toml
crates/autovocoder-standalone/src/: live.rs  main.rs  render.rs
crates/autovocoder-standalone/tests/: render_smoke.rs
crates/autovocoder-wasm/: Cargo.toml
crates/autovocoder-wasm/src/: lib.rs
scripts/: install-lv2.sh  robot-voice.sh  setup-macos-cross.sh
