[workspace]
resolver = "2"
members = [
    "crates/autovocoder-dsp",
    "crates/autovocoder-lv2",
    "crates/autovocoder-standalone",
    "crates/autovocoder-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rich Siomporas"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/"

[workspace.dependencies]
autovocoder-dsp = { path = "crates/autovocoder-dsp" }
hound = "3.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasm-bindgen = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
