[workspace]
resolver = "2"
members = [
    "crates/autovocoder-dsp",
    "crates/autovocoder-lv2",
    "crates/autovocoder-standalone",
    "crates/autovocoder-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rich Siomporas"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/"

[workspace.dependencies]
autovocoder-dsp = { path = "crates/autovocoder-dsp" }
hound = "3.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasm-bindgen = "0.2"
rustfft = "6"

[profile.release]
# Fat LTO is worth the longer link time for the LV2 cdylib — biquad / env
# follower / autovocoder hot-path lives across crate boundaries and only
# fully inlines under fat LTO. Cloud Run cold starts are dominated by
# container pull, not link time, so the build cost is essentially free in
# the deploy loop.
lto = "fat"
codegen-units = 1
